(rule
 (targets specification_j.ml specification_j.mli)
 (deps specification.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets specification_t.ml specification_t.mli)
 (deps specification.atd)
 (action
  (run atdgen -t %{deps})))

(library
 (name checkanno)
 (modules specification specification_t specification_j)
 (libraries atdgen))
