(rule
 (targets specification_j.ml specification_j.mli)
 (deps specification.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets specification_t.ml specification_t.mli)
 (deps specification.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets specification_v.ml specification_v.mli)
 (deps specification.atd)
 (action
  (run atdgen -v %{deps})))

(library
 (name checkanno)
 (modules specification specification_adapter specification_util specification_t specification_j specification_v)
 (libraries atdgen uri))
